--- a/style.css
+++ b/style.css
@@ -3,3 +3,44 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin: 0 auto;
+}
+
+nav {
+ text-align: center;
+}
+
+nav a {
+  padding: 0 10px;
+  background-color: grey;
+  margin: 0 auto;
+}
+
+
+figcaption {
+  font-size: 12px;
+  text-align: center;
+}
+
+
+#featured-property p {
+  width: 800px;
+  margin: 10px auto;
+  text-align: center;
+}
+
+
+#details div {
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+  display: inline-block;
+}
